# epitech-coding-style-fixer

./: .clang-format  .gitignore  Cargo.toml  README.md  a.out  build.sh  coding-style.sh  docker_token.txt  main.c  project.json
delivery/: main.c  my_print_alpha.c  my_print_alpha.h  my_print_revalpha.c  my_print_revalpha.h
resources/: .clang-format  .gitignore  main.c
src/: all_coding_style_fixe.rs  coding_checker.rs  coding_style_fixer.rs  docker_operation.rs  error.rs  main.rs  prelude.rs  project_operation.rs
src/fixer/: all_coding_style_fixe.rs  fix_c_a3.rs  fix_c_g1.rs  fix_c_g3.rs  fix_c_g7.rs  fix_c_g8.rs  fix_c_l3.rs  fix_c_l5.rs  fix_c_l6.rs  fix_c_v3.rs  mod.rs
