[package]
name = "epitech-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
clap = {version = "4.5.17", features = ["derive"]}
thiserror = "1.0.63"
chrono = "0.4.38"

[dev-dependencies]
anyhow = "1.0.89"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
incremental = false
debug = false